2008-07-07  Richard Dale  <richard.j.dale@gmail.com>
* Added a tiger example C# applet. It wasn't possible to build an executable
  called 'main' as mono gave an error about it not having an extension.
  Maybe some sort of special cmake macro is needed for building C# plasmoids.

2008-07-06  Arno Rehn  <arno@arnorehn.de>

	* Moved the PlasmaScripting.* classes back into the main plasma assembly,
	  since we can't reference Applet.dll and DataEngine.dll for C# Plasma
	  plugins.

2008-07-06  Richard Dale  <richard.j.dale@gmail.com>
* Add a PlasmaScripting.QGraphicsWidget class with all the public methods in
  the QGraphicsWidget/QGraphicsItem/QGraphicsLayoutItem heirarchy implemented
  by forwarding the calls to the underlying Plasma.Applet.
* Implemented event handling method overrides via an event filter in the
  Applet ScriptEngine
* Added a .desktop file for the DataEngine script engine
* The Plasma sources have been regenerated with tabs replaced with spaces.
  The methods on the Plasma.DataEngineScripting class special cased so that
  they are public otherwise it wasn't very convenient for this particular
  implementation of a scripting data engine.

2008-07-02  Richard Dale  <richard.j.dale@gmail.com>
* Added a PlasmaScripting.DataEngine class, which will be part of the main
  plasma .dll, and two classes 'KimonoAppletScript.DataEngine' and 
  'KimonoAppletScript.Applet' for implementing the ScriptEngine plugins for 
  Applets and DataEngines

2008-07-02  Richard Dale  <richard.j.dale@gmail.com>
* Added a PlasmaScripting.Applet class which will be subclassed to implement
  ScriptEngine based C# plasmoids. The Plasma.Applet source was copied and
  enums and static methods were removed. The code in the public methods was
  changed to forward the method call to the underlying applet. To do this for
  the protected methods, reflection will need to be used.
* Added an implicit type conversion operator so that a PlasmaScripting.Applet